# cloudcap

./: .gitignore  Makefile  README.md  pyproject.toml
cloudcap/: __init__.py  __main__.py  analyzer.py  aws.py  cfn_template.py  cli.py  cloudformation.py  estimates.py  logging.py  metrics.py  utils.py
cloudcap/plugins/: __init__.py  builtin_plugins.py
deploy/: lambda_function.py  stack.yaml  test.py
docs/: conf.py  index.rst  overview.rst  reference.rst
examples/: sns-lambda-alias.yaml  sqs-lambda.yaml
tests/: test_arn.py
