[tool.poetry]
name = "cloudcap"
version = "0.1.0"
description = ""
authors = ["Feitong Qiao <flq2101@columbia.edu>"]
maintainers = ["Feitong Qiao <flq2101@columbia.edu>"]
readme = "README.md"
repository = "https://github.com/Barnard-PL-Labs/cloudcap"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.0"}

[tool.poetry.scripts]
cloudcap = 'cloudcap.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
